# koolkit

./: .envrc  .gitignore  LICENSE.md  README.md  pyproject.toml  pytest.ini
src/koolkit/: __init__.py  profiling.py
src/koolkit/numbers/: __init__.py  roman_numerals.py
src/koolkit/progress_bars/: __init__.py  ellipsis_progress_bar.py  ripple_progress_bar.py  spinner_progress_bar.py
src/koolkit/strings/: __init__.py  edit_strings.py  evaluate_as_f_string.py
src/tests/: test_roman_numerals.py  test_strings.py
usage/: SCRATCH.py
