[project]
name = "koolkit"
version = "0.1.0"
description = "Sandro's favorite toolkit functions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.5",
    "rich>=14.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["koolkit"]
package-dir = {"" = "src"}
